{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 1134,
  "lineage": "3806abeb-168e-a88b-035d-d431535b75e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b388a8bc37fa54e",
            "arn": "arn:aws:ec2:us-east-1:690248313330:elastic-ip/eipalloc-09b388a8bc37fa54e",
            "association_id": "eipassoc-099a7a424e2a4d495",
            "domain": "vpc",
            "id": "eipalloc-09b388a8bc37fa54e",
            "instance": "i-0f67c32b4f0bfc1d6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0923e763620fe6d03",
            "private_dns": "ip-10-0-101-83.ec2.internal",
            "private_ip": "10.0.101.83",
            "public_dns": "ec2-18-204-82-114.compute-1.amazonaws.com",
            "public_ip": "18.204.82.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_public_ec2_instance.aws_eip.this",
            "module.ec2_public_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_public_ec2_instance.aws_iam_role.this",
            "module.ec2_public_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.ec2_public_ec2_instance.aws_instance.ignore_ami",
            "module.ec2_public_ec2_instance.aws_instance.this",
            "module.ec2_public_ec2_instance.aws_spot_instance_request.this",
            "module.ec2_public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public_ec2_instance.data.aws_partition.current",
            "module.ec2_public_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance[\"0\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-01e28f9e28e507d39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e28f9e28e507d39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0876fb20002ead0cb",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f554cf64d0083bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8ee9bcee630651b",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - private ec2 instance"
            },
            "vpc_security_group_ids": [
              "sg-00c6f0dfcee71a643"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance.aws_iam_role.this",
            "module.ec2_private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance.data.aws_partition.current",
            "module.ec2_private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_ec2_instance[\"1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-0db2a9eca3ec5e053",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db2a9eca3ec5e053",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07947e4ed8b97cd54",
            "private_dns": "ip-10-0-2-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03fe914b6efab7121",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066b64bb37e50bb6f",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT - dev - private ec2 instance"
            },
            "vpc_security_group_ids": [
              "sg-00c6f0dfcee71a643"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_private_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_private_ec2_instance.aws_iam_role.this",
            "module.ec2_private_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_private_ec2_instance.data.aws_partition.current",
            "module.ec2_private_ec2_instance.data.aws_ssm_parameter.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.egress_rules",
            "module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.egress_with_self",
            "module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.private_sg.aws_security_group_rule.ingress_rules",
            "module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.public_sg.aws_security_group_rule.computed_egress_rules",
            "module.public_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_egress_with_self",
            "module.public_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.computed_ingress_rules",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.public_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.egress_rules",
            "module.public_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.egress_with_self",
            "module.public_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.public_sg.aws_security_group_rule.ingress_rules",
            "module.public_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.public_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.public_sg.aws_security_group_rule.ingress_with_self",
            "module.public_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065aeacd44e98d9ac",
            "arn": "arn:aws:ec2:us-east-1:690248313330:instance/i-0f67c32b4f0bfc1d6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f67c32b4f0bfc1d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0923e763620fe6d03",
            "private_dns": "ip-10-0-101-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf2ec260ed4bc3ed",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bbe941fe6b3f78a",
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "IT-dev-vpc- public ec2 instance"
            },
            "vpc_security_group_ids": [
              "sg-07691d5219a398ce9"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux",
            "module.ec2_public_ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_public_ec2_instance.aws_iam_role.this",
            "module.ec2_public_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public_ec2_instance.data.aws_partition.current",
            "module.ec2_public_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-00c6f0dfcee71a643",
            "description": "Security group for bastian host with SSH access",
            "egress": [],
            "id": "sg-00c6f0dfcee71a643",
            "ingress": [],
            "name": "dev-IT-private-sg-https-20250427204317935000000004",
            "name_prefix": "dev-IT-private-sg-https-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-808726094",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00c6f0dfcee71a643",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1738604362",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00c6f0dfcee71a643",
            "security_group_rule_id": "sgr-067be20c496e206f6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3955768948",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00c6f0dfcee71a643",
            "security_group_rule_id": "sgr-0dbd89f879e407262",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-07691d5219a398ce9",
            "description": "Security group for bastian host with SSH access",
            "egress": [],
            "id": "sg-07691d5219a398ce9",
            "ingress": [],
            "name": "dev-IT-bastian-sg-ssh-20250427204317983900000005",
            "name_prefix": "dev-IT-bastian-sg-ssh-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2565457184",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07691d5219a398ce9",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2644634997",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07691d5219a398ce9",
            "security_group_rule_id": "sgr-027b23b3874bb3238",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_sg.aws_security_group.this",
            "module.public_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:network-acl/acl-0b9601e2a656c88db",
            "default_network_acl_id": "acl-0b9601e2a656c88db",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b9601e2a656c88db",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "690248313330",
            "subnet_ids": [
              "subnet-0533b9e166f773377",
              "subnet-066b64bb37e50bb6f",
              "subnet-06bbe941fe6b3f78a",
              "subnet-0e3bd8265b1529cc1",
              "subnet-0e462c29e31a6229b",
              "subnet-0f8ee9bcee630651b"
            ],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-02f7a8e803a455d48",
            "default_route_table_id": "rtb-02f7a8e803a455d48",
            "id": "rtb-02f7a8e803a455d48",
            "owner_id": "690248313330",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-0aafd58b928233266",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0aafd58b928233266",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-default"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3d03a4f0b513e70",
            "arn": "arn:aws:ec2:us-east-1:690248313330:elastic-ip/eipalloc-0f3d03a4f0b513e70",
            "domain": "vpc",
            "id": "eipalloc-0f3d03a4f0b513e70",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-209-195-72.compute-1.amazonaws.com",
            "public_ip": "18.209.195.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:internet-gateway/igw-0c9fba4a1861279fe",
            "id": "igw-0c9fba4a1861279fe",
            "owner_id": "690248313330",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3d03a4f0b513e70",
            "association_id": "eipassoc-070fb4784cfdcb44b",
            "connectivity_type": "public",
            "id": "nat-0cd451b6d369289ea",
            "network_interface_id": "eni-073ac65c450cca4c9",
            "private_ip": "10.0.101.130",
            "public_ip": "18.209.195.72",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06bbe941fe6b3f78a",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b1e85f2a1232aa4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd451b6d369289ea",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1e85f2a1232aa4c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c9fba4a1861279fe",
            "id": "r-rtb-0a2a43e3479591e751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2a43e3479591e75",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-05c6322a543e472f8",
            "id": "rtb-05c6322a543e472f8",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-0b1e85f2a1232aa4c",
            "id": "rtb-0b1e85f2a1232aa4c",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:route-table/rtb-0a2a43e3479591e75",
            "id": "rtb-0a2a43e3479591e75",
            "owner_id": "690248313330",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0209412652c632954",
            "route_table_id": "rtb-05c6322a543e472f8",
            "subnet_id": "subnet-0e3bd8265b1529cc1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4897d40009efe41",
            "route_table_id": "rtb-05c6322a543e472f8",
            "subnet_id": "subnet-0533b9e166f773377"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07023847545f724f7",
            "route_table_id": "rtb-0b1e85f2a1232aa4c",
            "subnet_id": "subnet-0f8ee9bcee630651b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0138fc654ddeb29de",
            "route_table_id": "rtb-0b1e85f2a1232aa4c",
            "subnet_id": "subnet-066b64bb37e50bb6f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072d2bf1e3770a898",
            "route_table_id": "rtb-0a2a43e3479591e75",
            "subnet_id": "subnet-06bbe941fe6b3f78a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cc46e92932e333e",
            "route_table_id": "rtb-0a2a43e3479591e75",
            "subnet_id": "subnet-0e462c29e31a6229b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0e3bd8265b1529cc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3bd8265b1529cc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0533b9e166f773377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0533b9e166f773377",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_database_subnet"
            },
            "tags_all": {
              "Name": "my_database_subnet"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0f8ee9bcee630651b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8ee9bcee630651b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-066b64bb37e50bb6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b64bb37e50bb6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet"
            },
            "tags_all": {
              "Name": "my_private_subnet"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-06bbe941fe6b3f78a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bbe941fe6b3f78a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-0e462c29e31a6229b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e462c29e31a6229b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-01270a44e75dc8be0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:vpc/vpc-01270a44e75dc8be0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9601e2a656c88db",
            "default_route_table_id": "rtb-02f7a8e803a455d48",
            "default_security_group_id": "sg-0aafd58b928233266",
            "dhcp_options_id": "dopt-0d229ad7ffd0a5ec3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01270a44e75dc8be0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f7a8e803a455d48",
            "owner_id": "690248313330",
            "tags": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            },
            "tags_all": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}